public/frontend/css/stylesheet.css
/* ... */
.menu.dropdown.name {
    margin-left: 30px;
}
.menu.dropdown.name .dropdown-content {
    margin-top: -10%;
}

.menu.dropdown.name a h1 {
    color: black;
    font-size: 20px;
}

.catego {
    margin-left: 20px;
    width: 40%;
    height: auto;
    color: black;
    font-size: 30px;
    font-weight: 10;
}
/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    margin-top: -10%;
    width: 150px;
    display: none;
    position: relative;
    background-color: #ffbc58;
    z-index: 9999;
    border-radius: 5px;
}
.dropdown-img {
    width: 150px;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.notify {
    min-width: 20px;
    float: right;
    margin-top: -5px;
    background-color: red;
    border-radius: 50%;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #FF9800;
    border-radius: 5px;
}

/* Show the dropdown menu on hover */
.menu.dropdown:hover .dropdown-content {
    display: block;
}

ul.menu{
    text-align: center;
    height: 70px;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #4a3d20;
}
li.menu {
    text-align: center;
    height: 70px;
    width: 10%;
    font-weight: bold;
    float: left;
    position: relative;
}
li.menu.text {
    padding-top: 10px;
}
li.menu a {
    display: block;
    color: white;
    text-align: center;
    padding: 15px 20px 15px 0;
    text-decoration: none;
}
li.menu.logo {
    width: 275px;
    height: 70px;
}
li.menu img#avatar {
    width: 50px;
    height: 50px;
    margin-top: 10px;
    border-radius: 50%;
    background: #98C3FF;
    float: left;
}
li.menu.avatar {
    position: absolute;
    right: 210px;
    list-style-type: none;
}
li.menu.name {
    position: absolute;
    right: 170px;
}
li.menu a:hover {
    /* background-color: #0080ff; */
}
/* Home's Hot post  */
.newest-post {
    overflow: hidden;
    max-width: 254px;
}
#content {
    padding: 20px 10% 0 10%;
    width: 98%;
    margin-top: 20px;
    margin-right: auto;
    margin-left: auto;
}
#search {
    width: 80%;
    margin-right: auto;
    margin-left: auto;
}
#searchInput {
    padding-left: 20px;
    font-size: 20px;
    min-width: 79%;
    height: 50px;
    border-radius: 4px;
    border: 1px;
}
#searchedPosts {
    width: 80%;
}

#searchButton {
    font-weight: bold;
    font-size: 20px;
    min-width: 20%;
    height: 50px;
    border-radius: 4px;
    border: none;
    background-color: #FF9800;
    color: white;
}
#searchButton:hover {
    background-color: #e28700;
}
.list-group-item {
    margin: auto;
    width: 99%;
    height: 50px;
    border-radius: 4px;
    border: 1px;
}
#hotPosts .category-list .category-post {
    width: 100%;
    height: 110px;
    overflow: hidden;
}
#hotPosts .category-list .category-post a {
    font-size: 20px;
    margin-right: 30px;
}
#hotPosts .category-list .category-post .content-foot-user a {
    font-size: 12px;
}
.login-page h3 {
    font-size: 30px;
    margin-left: 50px;
    margin-bottom: 20px;
}
#Category {
    /*margin-left: 50px;*/
    margin-bottom: 50px;
}
#Category {
    /*width: 80%;*/
    border:2px solid rgba(0, 0, 0, 0.5);
    border-top:15px solid rgba(0, 0, 0, 0.5);
    border-right:15px solid rgba(0, 0, 0, 0.5);
    border-radius: 10px;
}
#Category tr {
    height: 50px;
    border-left: 2px solid grey;
    border-right: 2px solid grey;
    border-bottom: 1px solid grey;
    border-radius: 4px;
}
#Category td {
    padding-left: 20px;
    font-size: 18px;
}
#Category th {
    font-family: 'Luckiest Guy', cursive;
    font-size: large;
    padding-top: 30px;
    padding-left: 30px;
    background-color: #edf6fdb0;
    border: 2px solid grey;
}

#Category a {
    color: #2577b1;
}

.tables{ border-collapse:collapse; table-layout:fixed;}

.post-column {
    max-width: 100px !important;
}


#header {
    position: sticky;
    float: left;
    width: 100%;
    padding: 0;
    margin-top: 5px;
}

 /*Show profile */
#datepicker {
    background-color: white;
}

.radioGender {
    margin: 0 10px 0 130px;
}
.radioLabel {
    margin-right: 50px;
}

.star {
    color: red;
}

#datepicker {
    margin-bottom: 10px;
}

#endButtonsDiv {
    text-align: center;
}
#endButtonsDiv .info-button {
    border: 0px;
    font-weight: 700;
    color: white;
}

 /*Screen 3->9 */
button.btn.btn-primary#submitButton {
    width: 120px;
    margin: 30px 0 0 15px;
    position: relative;
}

button.btn.btn-primary#goBackButton:hover {
    background-color: #7a8793;
}
button.btn.btn-primary#goBackButton {
    background-color: #666666;
    width: 120px;
    margin: 30px 15px 0 0;
    position: relative;
}
button.btn.btn-primary#goBackButton a#goBack {
    color: white;
}

form.has-validation-callback {
    padding: 20px;
    border: solid 1px gray;
    border-radius: 4px;
    margin-bottom: 200px;
}
span#changePassSpan{
    margin-right: -150px;
}
span#changePassSpan .sign-button {
    float: right;
    width: 50%;
}
span#changePassSpan2{
    margin-left: 20px;
}
span#changeRoleSpan{
    /*margin-left: 80px;*/
}
span#changeRoleSpan button{
    background-color: green;
}
span#changeRoleSpan button:hover{
    background-color: #00b44e;
}
button#changePassButton {
    position: relative;
}
button#changePassButton a{
    color: white;
}

div.form-group#formHeader {
    border-bottom: solid 3px #0c525d;
}

div#updateSuccessfullyMessage {
    position: center;
    font-weight: bold;
    color: green;
    text-align: center;
}
div#updateFailMessage {
    color: red;
    font-weight: bold;
    text-align: center;
}

table#example1 tr td img.avatar{
    width: 50px;
    height: 50px;
}

table#example1 tr td i {
    margin: 0 5px 0 5px;
}
table#example1 tr td.verifiedEmail {
    color: green;
}

h1 {
    display: inline-block;
}
/* ... */

